deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bi-portal
  labels:
    app.kubernetes.io/part-of: bi-portal
